<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="410dp"
        android:layout_height="201dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/dog1"
                android:padding="10dp"
                app:srcCompat="@drawable/dog3" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/dog2"
                android:padding="10dp"
                app:srcCompat="@drawable/dog2" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/dog3"
                android:padding="10dp"
                app:srcCompat="@drawable/dog1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/dog4"
                android:padding="10dp"
                app:srcCompat="@drawable/dog" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="369dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/enter_your_number"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/enter_your_email_here"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>